// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/BasicElements Renders ExternalLink correctly 1`] = `
<DocumentFragment>
  <a
    class="sc-bdVaJa hjhZXn"
  />
</DocumentFragment>
`;

exports[`UI/BasicElements Renders Link correctly 1`] = `
<DocumentFragment>
  <a
    class="sc-bwzfXH ctQsLz"
    href="/"
  />
</DocumentFragment>
`;

exports[`UI/BasicElements Renders Page correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat iGLGbS"
  />
</DocumentFragment>
`;
